texi2html/test/invalid/res_info/texi_code_not_closed_no_newline/code_not_closed_no_newline.texi
\input texinfo @c -*-texinfo-*-
@settitle code_not_closed_no_newline

@node Top
@top Missing closing bracket without a following newline

@menu
* chapter::
@end menu

@code{not closed
@node chapter
@chapter chapter

@code{still not closed
@bye
